<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:gravity="center"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px140"
        android:text="@string/again" />

    <ImageView
        android:layout_width="@dimen/px70"
        android:layout_height="@dimen/px70"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/textView5"
        android:src="@mipmap/reload_alt_24x28" />
    </LinearLayout>
    <TextView
        android:layout_below="@+id/ll_reload"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:text="@string/leve_1" />

    <TextView
        android:layout_below="@+id/textView6"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:text="@string/leve_2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:paddingStart="@dimen/px70"
        android:text="@string/leve_3"
        android:textSize="@dimen/px50" />

    <TextView
        android:layout_below="@+id/textView8"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:text="@string/leve_4" />

    <TextView
        android:layout_below="@+id/textView9"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:text="@string/leve_5" />

    <TextView
        android:layout_below="@+id/textView10"
        android:paddingStart="@dimen/px70"
        android:textSize="@dimen/px50"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:text="@string/leve_6" />

</RelativeLayout>
